feat: visualização dos dados processados

--- a/ visualizacao_dados.ipynb
+++ b/ visualizacao_dados.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "id": "f2fc48a5",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 55,
    "id": "1b6877f5",
    "metadata": {},
    "outputs": [
@@ -975,13 +975,13 @@
     "\n",
     "from IPython.display import display\n",
     "\n",
-    "# 👇 Isso exibe a tabela formatada bonitinha no notebook\n",
+    "# 👇 Isso exibe a tabela formatada dos resultados processados dos grafos\n",
     "display(df)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 56,
    "id": "1b3e16d0",
    "metadata": {},
    "outputs": [
